--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": "^23.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "readline-sync": "^1.4.10",
     "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
