--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.3",
     "debounce": "^2.2.0",
+    "fichcode": "^1.0.0",
     "monaco-editor": "^0.52.2",
     "motion": "^12.7.4",
     "node": "^23.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "readline-sync": "^1.4.10",
+    "react-router-dom": "^7.5.2",
     "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
