--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,6 +21,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "noImplicitAny": false,
+    "strictFunctionTypes": false,
 
     /* PERSONALIZED */
     "baseUrl": "./src",
